--- a/aria-practices.html
+++ b/aria-practices.html
@@ -870,7 +870,7 @@
           <li>In a combobox implementing the ARIA 1.0 pattern:
             <ul>
               <li>The element that serves as the textbox has role <a href="#combobox" class="role-reference">combobox</a>.</li>
-              <li>When the combobox popup is visible, the element with role combobox has <a href="#aria-owns" class="property-reference">aria-owns</a> set to a value that refers to an element with role <a href="#listbox" class="role-reference">listbox</a>.
+              <li>When the combobox popup is visible, the element with role combobox has <a href="#aria-owns" class="property-reference">aria-owns</a> set to a value that refers to an element with role <a href="#listbox" class="role-reference">listbox</a>.</li>
               <li>
                 the element with role <code>combobox</code> has a value for <a href="#aria-haspopup" class="property-reference">aria-haspopup</a> of <code>listbox</code>.
                 Note that elements with role <code>combobox</code> have an implicit <code>aria-haspopup</code> value of <code>listbox</code>.
@@ -2212,7 +2212,7 @@
           <li>Each slider element has the <a class="property-reference" href="#aria-valuenow">aria-valuenow</a> property set to a decimal value representing the current value of the slider.</li>
           <li>Each slider element has the <a class="property-reference" href="#aria-valuemin">aria-valuemin</a> property set to a decimal value representing the minimum allowed value of the slider.</li>
           <li>Each slider element has the <a class="property-reference" href="#aria-valuemax">aria-valuemax</a> property set to a decimal value representing the maximum allowed value of the slider.</li>
-          <li>When the range (e.g. minimum and/or maximum value) of another slider is dependent on the current value of a slider, the values of <a class="property-reference" href="#aria-valuemin">aria-valuemin</a> or <a class="property-reference" href="#aria-valuemax">aria-valuemax</a> of the dependent sliders are updated when the value changes.
+          <li>When the range (e.g. minimum and/or maximum value) of another slider is dependent on the current value of a slider, the values of <a class="property-reference" href="#aria-valuemin">aria-valuemin</a> or <a class="property-reference" href="#aria-valuemax">aria-valuemax</a> of the dependent sliders are updated when the value changes.</li>
           <li>
           If a value of <code>aria-valuenow</code> is not user-friendly, e.g., the day of the week is represented by a number, the
           <a class="property-reference" href="#aria-valuetext">aria-valuetext</a>
@@ -3662,6 +3662,7 @@
             <th scope="row">Redo action</th>
             <td><kbd>Control + Y</kbd></td>
             <td>Command + Shift + Z</td>
+          </tr>
         </tbody>
       </table>
     </section>
@@ -3956,6 +3957,7 @@
           <code>[role="grid"]</code>).  The value of <code>aria-colcount</code>
           and <code>aria-rowcount</code> must be an integer equal to the total
           number of rows or columns in the table or grid.
+        </p>
 
         <p>The following example demonstrates the use of <code>aria-rowcount</code>
           and <code>aria-rowindex</code> attributes for a hypothetical class list.
@@ -4162,7 +4164,7 @@
         <p>The example in the previous section demonstrates using
           <code>aria-rowindex</code> to identify whcih row in the of the grid
           is being rendered.
-          </code>
+        </p>
       </section>
 
       <section>
